--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -2,7 +2,7 @@
   grid-area: sidebar;
   border-right: 1px solid rgb(139, 139, 139);
   min-height: 100vh;
-  padding: 20px;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   gap: 20px;
