--- a/src/components/upload-image/upload-image.module.scss
+++ b/src/components/upload-image/upload-image.module.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  position: sticky;
+  top: 0;
+  padding: 20px 0;
+  background-color: #fff;
+  border-bottom: 1px solid rgb(139, 139, 139);
 }
